--- a/src/style/About.css
+++ b/src/style/About.css
@@ -1,23 +1,3 @@
-/* .about{
-    text-align: center;
-}
-
-.more-info{
-    border: 1px solid red;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.AboutPic img{
-    height: 550px;
-    width: 900px;
-    border-radius: 10px;
-}
-
-.number{
-    font-weight: bold;
-} */
-
 
 .about {
   text-align: center;
@@ -106,9 +86,9 @@
 .intro p {
   line-height: 1.7;
   font-size: 1.1rem;
-  color: #333;
+  color: #ddd;
   text-align: justify;
-  background: #f9f9f9;
+  background: #111;
   padding: 1.2rem 1.5rem;
   border-radius: 10px;
   border-left: 5px solid #00ffb3;
