--- a/src/style/CareerDetails.css
+++ b/src/style/CareerDetails.css
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-/* Back button */
+
 .back-btn {
   align-self: flex-start;
   background: transparent;
@@ -26,7 +26,7 @@
   color: black;
 }
 
-/* Main card */
+/* main card */
 .career-details-card {
   background: #111;
   border: 1px solid rgba(0, 255, 179, 0.3);
