--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,4 +1,3 @@
-/* ----------- FULL HERO SECTION ----------- */
 .home-container {
   /* min-height: 80vh; */
   min-height: calc(100vh - 80px);
@@ -12,7 +11,6 @@
   z-index:1
 }
 
-/* OPTIONAL GLOWING BACKGROUND EFFECT */
 .home-container::before {
   content: "";
   position: absolute;
@@ -29,7 +27,7 @@
   100% { opacity: 0.8; transform: scale(1.1); }
 }
 
-/* ----------- HERO CONTENT ----------- */
+
 .hero-content {
   max-width: 700px;
   animation: fadeUp 1s ease forwards;
@@ -40,7 +38,6 @@
   to { opacity: 1; transform: translateY(0); }
 }
 
-/* MAIN TITLE */
 .hero-title {
   font-size: 3.2rem;
   font-weight: 900;
@@ -49,7 +46,6 @@
   text-shadow: 0 0 15px rgba(0,255,179,0.4);
 }
 
-/* SUBTEXT */
 .hero-subtitle {
   font-size: 1.25rem;
   color: #ddd;
@@ -57,7 +53,7 @@
   margin-bottom: 2.5rem;
 }
 
-/* PRIMARY BUTTON */
+/* Primary button */
 .hero-btn {
   background-color: #00ffb3;
   color: black;
@@ -77,7 +73,7 @@
   transform: translateY(-3px);
 }
 
-/* ----------- RESPONSIVE ----------- */
+/* Media Queries*/
 @media (max-width: 768px) {
   .hero-title {
     font-size: 2.3rem;
